Add: new meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+		<meta name="author" content="Basile Buchler" />
 		<meta
 			name="description"
 			content="Je suis <b>Basile Buchler</b>, un développeur full-stack passioné. En quelques mots: curieux, rigueur et teamwork !"
 		/>
+		<meta property="og:type" content="website" />
 		<meta
 			property="og:title"
 			content="Basile Buchler - Développeur Full-Stack"
@@ -19,8 +21,9 @@
 		/>
 		<meta
 			property="og:image"
-			content="https://babasile.github.io/beardglasses.jpg"
+			content="https://babasile.github.io/preview.png"
 		/>
+		<meta name="og:image:alt" content="Profile picture" />
 		<meta property="og:url" content="https://babasile.github.io/" />
 
 		<meta
@@ -37,10 +40,16 @@
 		/>
 		<meta
 			name="twitter:image"
-			content="https://babasile.github.io/beardglasses.jpg"
+			content="https://babasile.github.io/preview.png"
 		/>
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:image:alt" content="Profile picture" />
+		<meta name="twitter:site" content="@Baabasile" />
+		<meta name="twitter:creator" content="@Baabasile" />
+		<meta
+			name="google-site-verification"
+			content="Fg2m22fZ-0wOuL_rosytGTlDw-YSZRs6BqbSBfugvSo"
+		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Basile Buchler - Développeur Full-Stack</title>
