Fix language for date in timeline item (Close #7), update Data and meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,8 +7,8 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="author" content="Basile Buchler" />
 		<meta
-			name="description"
-			content="Je suis <b>Basile Buchler</b>, un développeur full-stack passioné. En quelques mots: curieux, rigueur et teamwork !"
+			name="Description"
+			CONTENT="Je suis Basile Buchler, un développeur full-stack passioné. En quelques mots: curieux, rigueur et teamwork !"
 		/>
 		<meta property="og:type" content="website" />
 		<meta
